# prellm

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  ROADMAP.md  bumpver.toml  docker-compose.test.yml  docker-compose.yaml  goal.yaml  list.txt  project.functions.toon  project.toon  promptguard-status.md  pyproject.toml  rules.yaml
.github/workflows/: ci.yml
.prellm/: budget.json  trace_20260216_092605_Zdeployuj_apkę_na_prod.md  trace_20260216_094046_Zdeployuj_apkę_na_prod.md  trace_20260216_094128_Zdeployuj_apkę_na_prod.md  trace_20260216_094338_Zdeployuj_apkę_na_prod.md  trace_20260216_101602_Zdeployuj_apkę_na_prod.md  trace_20260216_120904_Zdeployuj_apkę_na_prod.md  trace_20260216_121925_Zdeployuj_apkę_na_prod.md  trace_20260216_130144_Zdeployuj_apkę_na_prod.md  trace_20260216_130755_Zdeployuj_apkę_na_prod.md
TODO/: prellm-tasks-env-context-collection.md
configs/: config.yaml  deploy.yaml  pipelines.yaml  prellm_config.yaml  prompts.yaml  response_schemas.yaml  rules.yaml  sensitive_rules.yaml
docs/: README.md  flow-graphs.md  refactoring-plan.md
examples/: cli_examples.sh  curl_api.sh  providers.py  python_sdk.py  quick_start.py
examples/embedded/: README.md  main.py  test_embedded.py
examples/k8s/: README.md  main.py  test_k8s.py
examples/leasing/: README.md  main.py  test_leasing.py
prellm/: __init__.py  budget.py  cli.py  core.py  env_config.py  llm_provider.py  logging_setup.py  models.py  pipeline.py  prompt_registry.py  query_decomposer.py  server.py  trace.py
prellm/agents/: executor.py  preprocessor.py
prellm/analyzers/: bias_detector.py  context_engine.py
prellm/chains/: process_chain.py
prellm/context/: __init__.py  codebase_indexer.py  folder_compressor.py  sensitive_filter.py  shell_collector.py  user_memory.py
prellm/core/: __init__.py  context.py  execution.py  legacy.py  main.py  pipeline.py  prompts.py  results.py  tracing.py
prellm/env_config/: __init__.py  commands.py  constants.py  loader.py  models.py  providers.py  storage.py  utils.py
prellm/trace/: __init__.py  markdown.py  models.py  terminal.py  utils.py
prellm/utils/: lazy_imports.py
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  map.yaml  project.toon.yaml  prompt.txt  toon.yaml  validation.toon.yaml
promptguard/: __init__.py  cli.py  core.py  models.py
promptguard/analyzers/: bias_detector.py  context_engine.py
promptguard/chains/: process_chain.py
scripts/: config_wizard.py
scripts/config_wizard/: __init__.py  ollama.py  providers.py  ui.py  wizard.py
tests/: test_budget.py  test_codebase_indexer.py  test_context.py  test_decomposer.py  test_edge_cases.py  test_env_config.py  test_env_config_storage.py  test_folder_compressor.py  test_full_context_pipeline.py  test_integration.py  test_models.py  test_one_function.py  test_pipeline.py  test_preprocessor_memory.py  test_prompt_registry.py  test_promptguard.py  test_schema_generator.py  test_sensitive_filter.py  test_server.py  test_shell_collector.py  test_trace.py  test_v04_context.py  test_v2_architecture.py
