[tool.poetry]
name = "prellm"
version = "0.2.1"
description = "preLLM — Small LLM decomposition middleware for prompt preprocessing, bias detection, DevOps process chains, and multi-provider orchestration via YAML config."
authors = [
    "Softreck <tom@sapletta.com>",
    "Tom Sapletta <tom@sapletta.com>",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wronai/prellm"
keywords = ["llm", "prompt-engineering", "prompt-decomposition", "small-llm", "devops", "litellm"]
packages = [{include = "prellm"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.40"
pydantic = "^2.0"
pyyaml = "^6.0"
typer = {version = "^0.12", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"
pytest-cov = "^4.0"
ruff = "^0.4"

[tool.poetry.scripts]
prellm = "prellm.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
