[tool.poetry]
name = "prellm"
version = "0.4.25"
description = "preLLM — One function for small LLM preprocessing before large LLM execution. Like litellm.completion() but with decomposition."
authors = ["Tom Sapletta <tom@sapletta.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wronai/prellm"
keywords = ["llm", "prompt-engineering", "prompt-decomposition", "small-llm", "devops", "litellm"]
packages = [{include = "prellm"}]
include = ["configs/**/*.yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.40"
pydantic = "^2.0"
pyyaml = "^6.0"
jinja2 = "^3.1"
typer = {version = ">=0.12", extras = ["all"]}
fastapi = "^0.115"
uvicorn = {version = "^0.32", extras = ["standard"]}
nfo = "^0.2"
instructor = {version = "^1.3", optional = true}
gitpython = {version = "^3.1", optional = true}
chromadb = {version = "^0.5", optional = true}

[tool.poetry.extras]
structured = ["instructor"]
git = ["gitpython"]
memory = ["chromadb"]
all = ["instructor", "gitpython", "chromadb"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"
pytest-cov = "^4.0"
ruff = "^0.4"
httpx = "^0.27"

[tool.poetry.scripts]
prellm = "prellm.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "examples"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
